<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="frequencyType"
            type="Integer" />

        <import type="android.view.View" />

        <variable
            name="isRepeatEdit"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_corner_20"
        android:backgroundTint="@color/silver"
        android:paddingVertical="15dp">


        <TextView
            android:id="@+id/txt"
            style="@style/Text_600_SemiB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/repeat"
            android:textColor="@color/shadow_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/sw_repeat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/sw_repeat" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_repeat"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbTint="@drawable/switch_thumb_selector"
            app:trackTint="@drawable/switch_track_selector" />

        <TextView
            android:id="@+id/txt_daily"
            android:layout_width="0dp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_corner_20"
            android:gravity="center"
            android:text="@string/daily"
            android:visibility="@{isRepeatEdit ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toStartOf="@+id/txt_weekly"
            app:layout_constraintHeight_max="48dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt"
            app:layout_constraintWidth_max="120dp" />

        <TextView
            android:id="@+id/txt_weekly"
            android:layout_width="0dp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_corner_20"
            android:gravity="center"
            android:text="@string/weekly"
            android:visibility="@{isRepeatEdit ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toStartOf="@+id/txt_monthly"
            app:layout_constraintHeight_max="48dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_daily"
            app:layout_constraintTop_toBottomOf="@id/txt"
            app:layout_constraintWidth_max="120dp" />

        <TextView
            android:id="@+id/txt_monthly"
            android:layout_width="0dp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_white_corner_20"
            android:gravity="center"
            android:text="@string/monthly"
            android:visibility="@{isRepeatEdit ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="48dp"
            app:layout_constraintStart_toEndOf="@+id/txt_weekly"
            app:layout_constraintTop_toBottomOf="@id/txt"
            app:layout_constraintWidth_max="120dp" />

        <FrameLayout
            android:id="@+id/fr_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="@{isRepeatEdit ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/txt_daily">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_weekly"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:orientation="horizontal"
                android:visibility="gone"

                android:weightSum="7">

                <TextView
                    android:id="@+id/txt_mon"
                    style="@style/TextDay"
                    android:layout_marginHorizontal="1dp"
                    android:text="@string/mon" />

                <TextView
                    android:id="@+id/txt_tue"
                    style="@style/TextDay"
                    android:layout_marginHorizontal="1dp"
                    android:text="@string/tue" />

                <TextView
                    android:id="@+id/txt_wed"
                    style="@style/TextDay"
                    android:layout_marginHorizontal="1dp"
                    android:text="@string/wed"

                    />

                <TextView
                    android:id="@+id/txt_thu"
                    style="@style/TextDay"
                    android:layout_marginHorizontal="1dp"
                    android:text="@string/thu"

                    />

                <TextView
                    android:id="@+id/txt_fri"
                    style="@style/TextDay"
                    android:layout_marginHorizontal="1dp"
                    android:text="@string/fri" />

                <TextView
                    android:id="@+id/txt_sat"
                    style="@style/TextDay"
                    android:layout_marginHorizontal="1dp"
                    android:text="@string/sat" />

                <TextView
                    android:id="@+id/txt_sun"
                    style="@style/TextDay"
                    android:layout_marginHorizontal="1dp"
                    android:text="@string/sun" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <GridView
                android:id="@+id/calendar_gridview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/bg_white_corner_12"
                android:horizontalSpacing="2dp"
                android:minHeight="130dp"
                android:numColumns="7"
                android:paddingVertical="@dimen/_5sdp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="2dp"
                android:visibility="@{frequencyType == 2 ? View.VISIBLE : View.GONE}" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/worksans_semibold"
            android:text="@string/frequency"
            android:textColor="@color/shadow_gray"
            android:textFontWeight="600"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fr_content"
            tools:ignore="UnusedAttribute" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_frequency"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/bg_white_corner_20"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7sdp"
                android:ellipsize="end"
                android:fontFamily="@font/worksans_medium"
                android:text="Every 1 week"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/appCompatImageView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/nav_arrow_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/txtCategory"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>